# cpp-sas7bdat-arrow

./: .gitignore  Cargo.toml  main.py  pyproject.toml
crates/cpp-sas7bdat/: Cargo.toml  build.rs
crates/cpp-sas7bdat/src/: lib.rs  main.rs  read.rs  to_polars.rs
